fix - remove JVM level environment var OS_AUTH_URL